@@ -1,10 +1,16 @@
 2009-06-04  Torbjorn Granlund  <tege@gmplib.org>
 
+	* tune/common.c (speed_mpn_bdiv_q_1, speed_mpn_bdiv_q_1_pi1):
+	New functions.
+	* tune/speed.c (routine): Add mpn_bdiv_q_1 and mpn_bdiv_q_1_pi1.
+	* tune/speed.h (SPEED_ROUTINE_MPN_BDIV_Q_1_PI1): New #define.
+	(SPEED_ROUTINE_MPN_BDIV_Q_1): Mew #define.
+
 	* configure.in (gmp_mpn_functions): Add bdiv_q_1 and bdiv_q_1_pi1.
 	* mpn/generic/bdiv_q_1.c: New file.
 	* mpn/generic/bdiv_q_1_pi1.c: New file.
-	* mpn/asm-defs.m4 (define_mpn): Add mpn_bdiv_q_1_pi1 and mpn_bdiv_q_1.
-	* gmp-impl.h (mpn_bdiv_q_1_pi1, mpn_bdiv_q_1): Declare.
+	* mpn/asm-defs.m4 (define_mpn): Add mpn_bdiv_q_1 and mpn_bdiv_q_1_pi1.
+	* gmp-impl.h (mpn_bdiv_q_1, mpn_bdiv_q_1_pi1): Declare.
 
 	* mpn/x86_64/lshift.asm: Cleanup.
 	* mpn/x86_64/rshift.asm: Cleanup.
